changed fieldspecs from list to pair